--- a/Index.html
+++ b/Index.html
@@ -1,61 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Live Trading Signals</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trade Signals</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #f5f5f5; }
-        select, button { font-size: 1.2em; margin: 10px; padding: 8px; }
-        .signal { margin-top: 20px; padding: 15px; border-radius: 8px; background-color: white; box-shadow: 0px 0px 10px rgba(0,0,0,0.1); }
-        .buy { color: green; font-weight: bold; }
-        .sell { color: red; font-weight: bold; }
-        .hold { color: gray; font-weight: bold; }
+        body {
+            font-family: Arial, sans-serif;
+            background: #f5f5f5;
+            text-align: center;
+            padding: 20px;
+        }
+        select, button {
+            font-size: 16px;
+            padding: 10px;
+            margin: 5px;
+        }
+        #result {
+            margin-top: 20px;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+            display: inline-block;
+            min-width: 200px;
+        }
     </style>
 </head>
 <body>
-    <h2>Live Trading Signals</h2>
-
-    <label for="asset">Choose Asset:</label>
+    <h1>📊 Trade Signal Dashboard</h1>
     <select id="asset">
-        <option value="XAU/USD">Gold (XAU/USD)</option>
-        <option value="XAG/USD">Silver (XAG/USD)</option>
+        <option value="Gold">Gold</option>
+        <option value="Silver">Silver</option>
         <option value="GBP/USD">GBP/USD</option>
         <option value="EUR/USD">EUR/USD</option>
-        <option value="CL=F">WTI Crude Oil</option>
-        <option value="BZ=F">Brent Crude Oil</option>
+        <option value="Bitcoin">Bitcoin</option>
+        <option value="Tesla">Tesla</option>
     </select>
+    <button onclick="getSignal()">Get Signal</button>
 
-    <div class="signal" id="signalBox">
-        <p>Price: <span id="price">-</span></p>
-        <p>Signal: <span id="signal">-</span></p>
-        <p>Confidence: <span id="confidence">-</span>%</p>
-        <p>Take Profit: <span id="tp">-</span></p>
-        <p>Stop Loss: <span id="sl">-</span></p>
-    </div>
+    <div id="result">Select an asset to view signal.</div>
 
     <script>
-        let ws;
-        const assetSelect = document.getElementById("asset");
+        async function getSignal() {
+            const asset = document.getElementById('asset').value;
+            const res = await fetch(`/api/signal?asset=${encodeURIComponent(asset)}`);
+            const data = await res.json();
 
-        function connectWS() {
-            if (ws) ws.close();
-            const asset = assetSelect.value;
-            ws = new WebSocket(`wss://YOUR-BACKEND-URL/ws/${encodeURIComponent(asset)}`);
-            ws.onmessage = (event) => {
-                const data = JSON.parse(event.data);
-                document.getElementById("price").innerText = data.price.toFixed(3);
-                document.getElementById("signal").innerText = data.signal;
-                document.getElementById("confidence").innerText = data.confidence;
-                document.getElementById("tp").innerText = data.tp ? data.tp.toFixed(3) : "-";
-                document.getElementById("sl").innerText = data.sl ? data.sl.toFixed(3) : "-";
+            if (data.error) {
+                document.getElementById('result').innerHTML = `<b>Error:</b> ${data.error}`;
+                return;
+            }
 
-                const signalElem = document.getElementById("signal");
-                signalElem.className = data.signal.toLowerCase();
-            };
+            document.getElementById('result').innerHTML = `
+                <h2>${data.asset}</h2>
+                <p>Price: $${data.price}</p>
+                <p>Direction: <b>${data.direction}</b></p>
+                <p>Take Profit: $${data.take_profit}</p>
+            `;
         }
-
-        assetSelect.addEventListener("change", connectWS);
-        connectWS();
     </script>
 </body>
 </html>
